--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-	"name": "teilleriana",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"run": "parcel index.html",
-		"build": "parcel build index.html"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"cssnano": "^4.1.10",
-		"parcel-bundler": "^1.12.4",
-		"sass": "^1.26.3"
-	},
-	"dependencies": {
-		"three": "^0.115.0"
-	}
+  "name": "vanilla",
+  "version": "1.0.0",
+  "description": "JavaScript example starter project",
+  "main": "index.html",
+  "scripts": {
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html"
+  },
+  "dependencies": {
+    "three": "^0.115.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.2.0",
+    "parcel-bundler": "^1.6.1",
+    "sass": "^1.26.3"
+  },
+  "keywords": [
+    "javascript",
+    "starter"
+  ]
 }
