--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "vanilla",
+  "name": "Teilleriana",
   "version": "1.0.0",
-  "description": "JavaScript example starter project",
-  "main": "index.html",
+  "description": "My delightful Nuxt.js project",
+  "author": "damienmontastier",
+  "private": true,
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "three": "^0.115.0"
+    "@babel/core": "^7.9.0",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.2.0",
-    "parcel-bundler": "^1.6.1",
-    "sass": "^1.26.3"
-  },
-  "keywords": [
-    "javascript",
-    "starter"
-  ]
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
+  }
 }
